--- a/singleLinkedListAeroPlane/makefile
+++ b/singleLinkedListAeroPlane/makefile
@@ -1,5 +1,5 @@
 make:
-	g++ main.cpp aeromethods.cpp -std=c++11 -O3 -o main
+	g++ main.cpp aeromethods.cpp -std=c++11 -O3 -o main -g
 run:
 	./main
 clean:
